fix(oblique/material): align icon prefix in inputs
OUI-4186

--- a/projects/oblique/src/styles/scss/material/_mat-form-field.scss
+++ b/projects/oblique/src/styles/scss/material/_mat-form-field.scss
@@ -108,7 +108,6 @@
 		}
 
 		.mat-mdc-text-field-wrapper {
-			padding-left: 12px; // empiric value
 			@include mat-form-field.standard-max-height();
 
 			.ob-form-sm & {
